--- a/views/shared/exhibit_layouts/gallery-full-right/layout.css
+++ b/views/shared/exhibit_layouts/gallery-full-right/layout.css
@@ -13,9 +13,13 @@
 }
 
 .gallery .exhibit-item {
-    float:left; 
-    margin-right:2%;
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 1%;
     width: 48%;
+    /* IE 7 */
+    *display: inline;
+    zoom: 1;
 }
 
 .exhibit-item {
