--- a/views/shared/exhibit_layouts/gallery-thumbnails-text-bottom/layout.css
+++ b/views/shared/exhibit_layouts/gallery-thumbnails-text-bottom/layout.css
@@ -1,5 +1,3 @@
-/* CSS for the gallery-thumbnails-text-bottom layout */
-
 .primary {
     overflow:hidden;
     zoom:1;
@@ -10,12 +8,14 @@
 }
 
 .exhibit-item {
-    display:block; 
-    float:left; 
+    display: inline-block;
+    vertical-align: top;
     width: 23%; 
-    height:23%; 
-    margin-right:2%;
-    margin-bottom:2%;
+    margin-right: 1%;
+    margin-bottom: 2%;
+    /* IE 7 */
+    *display: inline;
+    zoom: 1;
 }
 
 .exhibit-item img {
