--- a/views/shared/exhibit_layouts/gallery-thumbnails/layout.css
+++ b/views/shared/exhibit_layouts/gallery-thumbnails/layout.css
@@ -1,12 +1,12 @@
-/* CSS for the gallery-thumbnails layout */
-
 .exhibit-item {
-    display:block; 
-    float:left; 
+    display: inline-block;
+    vertical-align: top;
     width: 23%; 
-    height:23%; 
-    margin-right:2%;
-    margin-bottom:2%;
+    margin-right: 1%;
+    margin-bottom: 2%;
+    /* IE 7 */
+    *display: inline;
+    zoom: 1;
 }
 
 .exhibit-item img {
